prevent scrolling on mobile phones

--- a/source/_patterns/30-organisms/modal/modal.scss
+++ b/source/_patterns/30-organisms/modal/modal.scss
@@ -1,3 +1,14 @@
+html.prevent-scrolling {
+    @include smartphone {
+        height: 100%;
+
+        body {
+            height: 100%;
+            overflow: hidden;
+        }
+    }
+}
+
 .modal {
   display: none;
   position: fixed;
